--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <lombok.version>1.18.12</lombok.version>
     </properties>
 
+    <url>https://github.com/Mambabosso/dropwizard-auth-jwt</url>
+
     <scm>
         <connection>scm:git:https://github.com/Mambabosso/dropwizard-auth-jwt</connection>
         <developerConnection>scm:git:git@github.com:Mambabosso/dropwizard-auth-jwt.git</developerConnection>
@@ -68,6 +70,12 @@
                     <version>3.2.3</version>
                 </plugin>
 
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>1.6</version>
+                </plugin>
+
             </plugins>
         </pluginManagement>
 
@@ -110,6 +118,20 @@
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"/>
                             </transformers>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
