--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com.github.mambabosso</groupId>
     <artifactId>dropwizard-auth-jwt</artifactId>
-    <version>1.0</version>
+    <version>1.1</version>
 
     <properties>
         <dropwizard.version>2.0.8</dropwizard.version>
@@ -147,6 +147,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
